--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.2",
+  "version": "1.0.3",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -32,6 +32,7 @@
     "trailingComma": "es5"
   },
   "name": "pagelist",
+  "repository": "deiucanta/pagelist",
   "author": "Andrei Canta",
   "module": "dist/pagelist.esm.js",
   "size-limit": [
